Skip to content

cmake 3.17.0-rc3 double free or corruption

cmake version 3.17.0-rc3

Error in `/usr/bin/cmake': double free or corruption (!prev): 0x0000000001fefd60
-- *************************************************************************
The Crypto++ library does not officially support CMake. CMake support is a
community effort, and the library works with the folks using CMake to help
improve it. If you find an issue then please fix it or report it at
https://github.com/noloader/cryptopp-cmake.
-- *************************************************************************
-- The C compiler identification is GNU 6.5.0
-- The CXX compiler identification is GNU 6.5.0
-- Check for working C compiler: /usr/bin/cc
-- Check for working C compiler: /usr/bin/cc - works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Check for working CXX compiler: /usr/bin/c++
-- Check for working CXX compiler: /usr/bin/c++ - works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- cryptopp BUILD_STATIC=ON
-- cryptopp BUILD_SHARED=ON
-- cryptopp BUILD_TESTING=OFF
-- Found OpenMP_C: -fopenmp (found version "4.5") 
-- Found OpenMP_CXX: -fopenmp (found version "4.5") 
-- Found OpenMP: TRUE (found version "4.5")  
-- OpenMP: TRUE
-- Performing Test CRYPTOPP_IA32_SSE2
-- Performing Test CRYPTOPP_IA32_SSE2 - Success
-- Performing Test CRYPTOPP_IA32_SSSE3
-- Performing Test CRYPTOPP_IA32_SSSE3 - Success
-- Performing Test CRYPTOPP_IA32_SSE41
-- Performing Test CRYPTOPP_IA32_SSE41 - Failed
-- Performing Test CRYPTOPP_IA32_SSE42
-- Performing Test CRYPTOPP_IA32_SSE42 - Success
-- Performing Test CRYPTOPP_IA32_CLMUL
-- Performing Test CRYPTOPP_IA32_CLMUL - Success
-- Performing Test CRYPTOPP_IA32_AES
-- Performing Test CRYPTOPP_IA32_AES - Success
-- Performing Test CRYPTOPP_IA32_AVX
-- Performing Test CRYPTOPP_IA32_AVX - Success
-- Performing Test CRYPTOPP_IA32_AVX2
-- Performing Test CRYPTOPP_IA32_AVX2 - Success
-- Performing Test CRYPTOPP_IA32_SHA
-- Performing Test CRYPTOPP_IA32_SHA - Success
-- Performing Test CRYPTOPP_MIXED_ASM
-- Performing Test CRYPTOPP_MIXED_ASM - Success
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Platform: x86_64
-- Native arch: FALSE
-- Compiler: /usr/bin/c++
-- Compiler options: -Wall -Wno-unused-variable -Werror -fno-strict-aliasing -fvisibility=hidden  -Wall -Wno-unused-variable -Werror -fno-strict-aliasing -fvisibility=hidden -fopenmp -DCRYPTOPP_DISABLE_SSE4
-- Compiler definitions: 
-- Build type: RELEASE
-- Configuring done
-- Generating done
CMake Warning:
  Manually-specified variables were not used by the project:

    LINK_TYPE
    RUNTIME_LINK_TYPE


-- Build files have been written to: /work/CRYPTOPP_8_2_0/build
*** Error in `/usr/bin/cmake': double free or corruption (!prev): 0x0000000001fefd60 ***
======= Backtrace: =========
/lib/x86_64-linux-gnu/libc.so.6(+0x777e5)[0x7fe6b56db7e5]
/lib/x86_64-linux-gnu/libc.so.6(+0x8037a)[0x7fe6b56e437a]
/lib/x86_64-linux-gnu/libc.so.6(cfree+0x4c)[0x7fe6b56e853c]
/usr/bin/cmake[0x79fa8d]
/usr/bin/cmake[0x482464]
/usr/bin/cmake[0x77fd81]
/usr/bin/cmake[0x780bd9]
/usr/bin/cmake[0x624990]
/usr/bin/cmake[0x52d593]
/usr/bin/cmake[0x423892]
/usr/bin/cmake[0x417b79]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0)[0x7fe6b5684830]
/usr/bin/cmake[0x420379]
======= Memory map: ========
00400000-00c16000 r-xp 00000000 08:16 2506366                            /usr/bin/cmake
00e16000-00e17000 r--p 00816000 08:16 2506366                            /usr/bin/cmake
00e17000-00e1b000 rw-p 00817000 08:16 2506366                            /usr/bin/cmake
00e1b000-00e26000 rw-p 00000000 00:00 0 
01cbd000-020b4000 rw-p 00000000 00:00 0                                  [heap]
7fe6b0000000-7fe6b0021000 rw-p 00000000 00:00 0 
7fe6b0021000-7fe6b4000000 ---p 00000000 00:00 0 
7fe6b5664000-7fe6b5824000 r-xp 00000000 08:16 136229                     /lib/x86_64-linux-gnu/libc-2.23.so
7fe6b5824000-7fe6b5a24000 ---p 001c0000 08:16 136229                     /lib/x86_64-linux-gnu/libc-2.23.so
7fe6b5a24000-7fe6b5a28000 r--p 001c0000 08:16 136229                     /lib/x86_64-linux-gnu/libc-2.23.so
7fe6b5a28000-7fe6b5a2a000 rw-p 001c4000 08:16 136229                     /lib/x86_64-linux-gnu/libc-2.23.so
7fe6b5a2a000-7fe6b5a2e000 rw-p 00000000 00:00 0 
7fe6b5a2e000-7fe6b5a45000 r-xp 00000000 08:16 131339                     /lib/x86_64-linux-gnu/libgcc_s.so.1
7fe6b5a45000-7fe6b5c44000 ---p 00017000 08:16 131339                     /lib/x86_64-linux-gnu/libgcc_s.so.1
7fe6b5c44000-7fe6b5c45000 r--p 00016000 08:16 131339                     /lib/x86_64-linux-gnu/libgcc_s.so.1
7fe6b5c45000-7fe6b5c46000 rw-p 00017000 08:16 131339                     /lib/x86_64-linux-gnu/libgcc_s.so.1
7fe6b5c46000-7fe6b5d4e000 r-xp 00000000 08:16 136299                     /lib/x86_64-linux-gnu/libm-2.23.so
7fe6b5d4e000-7fe6b5f4d000 ---p 00108000 08:16 136299                     /lib/x86_64-linux-gnu/libm-2.23.so
7fe6b5f4d000-7fe6b5f4e000 r--p 00107000 08:16 136299                     /lib/x86_64-linux-gnu/libm-2.23.so
7fe6b5f4e000-7fe6b5f4f000 rw-p 00108000 08:16 136299                     /lib/x86_64-linux-gnu/libm-2.23.so
7fe6b5f4f000-7fe6b6122000 r-xp 00000000 08:16 2498781                    /usr/lib/x86_64-linux-gnu/libstdc++.so.6.0.28
7fe6b6122000-7fe6b6321000 ---p 001d3000 08:16 2498781                    /usr/lib/x86_64-linux-gnu/libstdc++.so.6.0.28
7fe6b6321000-7fe6b632c000 r--p 001d2000 08:16 2498781                    /usr/lib/x86_64-linux-gnu/libstdc++.so.6.0.28
7fe6b632c000-7fe6b632f000 rw-p 001dd000 08:16 2498781                    /usr/lib/x86_64-linux-gnu/libstdc++.so.6.0.28
7fe6b632f000-7fe6b6332000 rw-p 00000000 00:00 0 
7fe6b6332000-7fe6b634a000 r-xp 00000000 08:16 136375                     /lib/x86_64-linux-gnu/libpthread-2.23.so
7fe6b634a000-7fe6b6549000 ---p 00018000 08:16 136375                     /lib/x86_64-linux-gnu/libpthread-2.23.so
7fe6b6549000-7fe6b654a000 r--p 00017000 08:16 136375                     /lib/x86_64-linux-gnu/libpthread-2.23.so
7fe6b654a000-7fe6b654b000 rw-p 00018000 08:16 136375                     /lib/x86_64-linux-gnu/libpthread-2.23.so
7fe6b654b000-7fe6b654f000 rw-p 00000000 00:00 0 
7fe6b654f000-7fe6b6556000 r-xp 00000000 08:16 136383                     /lib/x86_64-linux-gnu/librt-2.23.so
7fe6b6556000-7fe6b6755000 ---p 00007000 08:16 136383                     /lib/x86_64-linux-gnu/librt-2.23.so
7fe6b6755000-7fe6b6756000 r--p 00006000 08:16 136383                     /lib/x86_64-linux-gnu/librt-2.23.so
7fe6b6756000-7fe6b6757000 rw-p 00007000 08:16 136383                     /lib/x86_64-linux-gnu/librt-2.23.so
7fe6b6757000-7fe6b675a000 r-xp 00000000 08:16 136253                     /lib/x86_64-linux-gnu/libdl-2.23.so
7fe6b675a000-7fe6b6959000 ---p 00003000 08:16 136253                     /lib/x86_64-linux-gnu/libdl-2.23.so
7fe6b6959000-7fe6b695a000 r--p 00002000 08:16 136253                     /lib/x86_64-linux-gnu/libdl-2.23.so
7fe6b695a000-7fe6b695b000 rw-p 00003000 08:16 136253                     /lib/x86_64-linux-gnu/libdl-2.23.so
7fe6b695b000-7fe6b6b76000 r-xp 00000000 08:16 136133                     /lib/x86_64-linux-gnu/libcrypto.so.1.0.0
7fe6b6b76000-7fe6b6d75000 ---p 0021b000 08:16 136133                     /lib/x86_64-linux-gnu/libcrypto.so.1.0.0
7fe6b6d75000-7fe6b6d91000 r--p 0021a000 08:16 136133                     /lib/x86_64-linux-gnu/libcrypto.so.1.0.0
7fe6b6d91000-7fe6b6d9d000 rw-p 00236000 08:16 136133                     /lib/x86_64-linux-gnu/libcrypto.so.1.0.0
7fe6b6d9d000-7fe6b6da0000 rw-p 00000000 00:00 0 
7fe6b6da0000-7fe6b6dfe000 r-xp 00000000 08:16 136135                     /lib/x86_64-linux-gnu/libssl.so.1.0.0
7fe6b6dfe000-7fe6b6ffe000 ---p 0005e000 08:16 136135                     /lib/x86_64-linux-gnu/libssl.so.1.0.0
7fe6b6ffe000-7fe6b7002000 r--p 0005e000 08:16 136135                     /lib/x86_64-linux-gnu/libssl.so.1.0.0
7fe6b7002000-7fe6b7009000 rw-p 00062000 08:16 136135                     /lib/x86_64-linux-gnu/libssl.so.1.0.0
7fe6b7009000-7fe6b702f000 r-xp 00000000 08:16 136201                     /lib/x86_64-linux-gnu/ld-2.23.so
7fe6b71fc000-7fe6b7204000 rw-p 00000000 00:00 0 
7fe6b722d000-7fe6b722e000 rw-p 00000000 00:00 0 
7fe6b722e000-7fe6b722f000 r--p 00025000 08:16 136201                     /lib/x86_64-linux-gnu/ld-2.23.so
7fe6b722f000-7fe6b7230000 rw-p 00026000 08:16 136201                     /lib/x86_64-linux-gnu/ld-2.23.so
7fe6b7230000-7fe6b7231000 rw-p 00000000 00:00 0 
7ffce3809000-7ffce382e000 rw-p 00000000 00:00 0                          [stack]
7ffce3952000-7ffce3955000 r--p 00000000 00:00 0                          [vvar]
7ffce3955000-7ffce3957000 r-xp 00000000 00:00 0                          [vdso]
ffffffffff600000-ffffffffff601000 r-xp 00000000 00:00 0                  [vsyscall]
Aborted (core dumped)
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information